# dancing-links

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: sudoku.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: small_latin_square.rs  small_sudoku.rs
src/: dense_grid.rs  exact_cover.rs  grid.rs  latin_square.rs  lib.rs  polyomino.rs  queens.rs  solver.rs  sparse_grid.rs  sudoku.rs  util.rs  utils.rs
src/exact_cover/: base.rs  grid.rs  mod.rs  solver.rs
src/grid/: base_node.rs
src/sparse_grid/: base_node.rs
tests/: common.rs  regression_tests.rs  sudoku_tests.rs
tests/data/sudoku/: sudoku_part-0.csv  sudoku_part-10000.csv  sudoku_part-100000.csv  sudoku_part-105000.csv  sudoku_part-110000.csv  sudoku_part-115000.csv  sudoku_part-120000.csv  sudoku_part-125000.csv  sudoku_part-130000.csv  sudoku_part-135000.csv  sudoku_part-140000.csv  sudoku_part-145000.csv  sudoku_part-15000.csv  sudoku_part-150000.csv  sudoku_part-155000.csv  sudoku_part-160000.csv  sudoku_part-165000.csv  sudoku_part-170000.csv  sudoku_part-175000.csv  sudoku_part-180000.csv  sudoku_part-185000.csv  sudoku_part-190000.csv  sudoku_part-195000.csv  sudoku_part-20000.csv  sudoku_part-200000.csv  sudoku_part-205000.csv  sudoku_part-210000.csv  sudoku_part-215000.csv  sudoku_part-220000.csv  sudoku_part-225000.csv  sudoku_part-230000.csv  sudoku_part-235000.csv  sudoku_part-240000.csv  sudoku_part-245000.csv  sudoku_part-25000.csv  sudoku_part-250000.csv  sudoku_part-255000.csv  sudoku_part-260000.csv  sudoku_part-265000.csv  sudoku_part-270000.csv  (+160 more)
