[package]
name = "dancing-links"
version = "0.2.0"
description = "Exact cover solver using dancing links technique"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
repository = "https://github.com/declanvk/dancing-links/"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "algorithms",
    "data-structures",
    "sudoku",
    "latin-square",
    "dancing-links",
]
categories = ["algorithms", "data-structures", "mathematics"]

exclude = [".github/"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
bumpalo = "3.4"
log = "0.4"

[target.'cfg(fuzzing)'.dependencies]
arbitrary = { version = "1.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.9.0"
rayon = "1.5.1"
