[package]
name = "dancing-links"
version = "0.3.0"
description = "Exact cover solver using dancing links technique"
authors = ["Declan Kelly <dkelly.home@gmail.com>"]
repository = "https://github.com/declanvk/dancing-links/"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["algorithms", "data-structures", "sudoku", "latin-square", "dancing-links"]
categories = ["algorithms", "data-structures", "mathematics"]
rust-version = "1.60" # MSRV

exclude = [
    ".github/",
]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
bumpalo = "3.4"

[dev-dependencies]
env_logger = "0.10.0"
log = "0.4.17"
rayon = "1.7.0"

[profile.bench]
debug = true
